[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "llama-benchy"
dynamic = ["version"]
description = "llama-bench style benchmarking tool for all OpenAI-compatible LLM endpoints"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "eugr" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "openai",
    "transformers>=5.2.0",
    "tabulate",
    "numpy",
    "requests",
    "asyncio",
    "aiohttp",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.scripts]
llama-benchy = "llama_benchy.__main__:main"

[project.urls]
"Homepage" = "https://github.com/eugr/llama-benchy"
"Bug Tracker" = "https://github.com/eugr/llama-benchy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_benchy"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/llama_benchy/_version.py"

[tool.hatch.metadata.hooks.vcs]
version-variables = ["build-hash"]

[tool.hatch.metadata.hooks.vcs.build-data]
build-hash = "git rev-parse --short HEAD"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "types-requests>=2.32.4.20260107",
    "types-tabulate>=0.9.0.20241207",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = ["src"]
